# centaureissi

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  centaureissi.example.toml  centaureissi.toml  diesel.toml  go.mod  go.sum
cmd/centaureissi/: init.go  main.go
crates/centaureissi_importer/: Cargo.toml
crates/centaureissi_server/: Cargo.toml
crates/centaureissi_server/src/: config.rs  lib.rs  main.rs
crates/centaureissi_server/src/actions/: compress.rs  mod.rs  rebuild_messages.rs  rebuild_search.rs
crates/centaureissi_server/src/blobs/: mod.rs
crates/centaureissi_server/src/db/: connection.rs  mod.rs  models.rs  requests.rs  responses.rs  schema.rs
crates/centaureissi_server/src/http/: context.rs  errors.rs  mod.rs
crates/centaureissi_server/src/http/middlewares/: mod.rs
crates/centaureissi_server/src/http/models/: auth.rs  mod.rs  requests.rs  responses.rs
crates/centaureissi_server/src/http/routes/: auth.rs  messages.rs  mod.rs  search.rs  stats.rs  users.rs  web.rs
crates/centaureissi_server/src/search/: message.rs  mod.rs
crates/centaureissi_server/src/utils/: message.rs  mod.rs
crates/centaureissi_web/: Cargo.toml
migrations/2025-03-29-075655_initial/: down.sql  up.sql
pkg/blob/: main.go  stats.go
pkg/config/: config.go
pkg/database/: centauressi.proto  const.go  init.go  migrations.go  regenerate-schema  repo_counter.go  repo_create.go  repo_delete.go  repo_exists.go  repo_get.go  repo_helpers.go  repo_list.go  repo_update.go  stats.go
pkg/html2text/: convert.go  helpers.go  main.go
pkg/models/: list.go  (+2 more)
(+59 files in other folders)
